tests/parser/fail/v27_fail_unsigned_shift_assign.ep
# COMPILE_FAIL_CONTAINS: Unexpected token in expression
fun main(): void {
    let x = u64(8)
    x >>>= 1
}
